# peregrinations-pythonesques

./: .env  .gitignore  README_git.md  _quarto.yml  about.html  cours_poo_solid.html  cours_poo_solid.ipynb  cours_poo_solid.qmd  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json
.github/workflows/: publish-quarto.yml  uv-requirements.yml
.ipynb_checkpoints/: cours_poo_solid-checkpoint.ipynb
.jupyter_cache/: global.db
.jupyter_cache/executed/e1494aa4ae070998bbea73508f38634e/: base.ipynb
_freeze/exercices/execute-results/: html.json
_site/: about.html  cours_poo_solid.html  index.html  search.json  sitemap.xml
_site/cours/poo-solid/: cours_poo_solid.html  cours_poo_solid_complet.html
_site/exercices/poo-solid/: exercices.html
_site/notebook/poo-solid/: cours_poo_solid.html  cours_poo_solid_complet.html  preparation_cours.html
_site/site_libs/bootstrap/: bootstrap-dark-22dd4fe0e10ea7dce0a488a548d26871.min.css
cours/poo-solid/: cours_poo_solid.qmd  cours_poo_solid_complet.qmd  introduction.qmd
cours/poo-solid/.jupyter_cache/: global.db
docs/: about.html  index.html  search.json
docs/cours/poo-solid/: cours_poo_solid.html  cours_poo_solid_complet.html  introduction.html
docs/exercices/poo-solid/: exercice_rag_weather.html  (+2 more)
exercices/poo-solid/: exercice_rag_weather.qmd  exercices.qmd
lesson/: index.qmd
notebook/.ipynb_checkpoints/: preparation_cours-checkpoint.ipynb
notebook/poo-solid/: cours_poo_solid.ipynb  cours_poo_solid_complet.ipynb  exercice_agentic_weather.ipynb  exercice_agentic_weather_correction.ipynb
(+10 files in other folders)
