[project]
name = "lesson"
version = "0.1.0"
description = "Cours POO & SOLID"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "mistralai>=1.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests",
    "rich",
]

[tool.uv]
dev-dependencies = [
    "ipykernel",
    "jupyterlab",
    "quarto"
]

